--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "centre",
   "version": "1.0.0",
-  "description": "Center any element or component vertically and horizontally",
+  "description": "A React component that helps you center any element or component vertically and horizontally",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
   "types": "./dist/esm/index.d.ts",
