--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "centre",
-  "version": "0.1.0",
+  "name": "centa",
+  "version": "0.0.1",
   "description": "A React component that helps you center any element or component vertically and horizontally",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
