--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           node-version: 16.0
 
       - name: Install package dependecies
-        run: yarn && yarn Install
+        run: yarn && yarn install
 
       - name: Build
         run: yarn build
