--- a/examples/package.json
+++ b/examples/package.json
@@ -9,7 +9,8 @@
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "centa": "^0.0.1-alpha-1",
+    "centa": "0.0.1-alpha-2",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
